--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
 #section2{
     width: 1200px;
     padding: 40px;
-    background: rgb(194, 215, 240);
+    background: rgb(1, 58, 181);
     margin: auto;
     margin-top: 20px;
     display: flex;
@@ -11,9 +11,10 @@
 }
 
 summary{
-    background: rgb(0, 102, 255);
+    background: rgb(39, 90, 43);
     color: white;
     padding: 20px;
+
     cursor: pointer;
     font-weight: bold;
 }
@@ -26,7 +27,7 @@ p{
 
 header{
     display: flex;
-    background-color: rgb(239, 246, 248);
+    background-color: rgb(4, 80, 7);
 
     
 }
@@ -37,7 +38,7 @@ a{
     align-items: center;
     padding: 50px;
     margin-right: 10px;
-    color: black;
+    color: rgb(255, 253, 253);
     font-weight: bold;
 }
 
@@ -49,7 +50,7 @@ nav{
 }
 
 nav a:hover{
-    color: rgb(185, 184, 184);
+    color: rgb(238, 244, 241);
 }
 
 #section1{
@@ -68,6 +69,28 @@ section, #menu_redes{
 aside{
     width: 30%;
         position: relative;
-        background-color: rgb(9, 160, 160); 
+        background-color: rgb(244, 253, 6); 
 
+}
+footer{
+    bottom: 0;
+    position: relative;
+    width: 100%;/* Ajusta el ancho */
+    height: 16%;/* Ajusta el largo */
+}
+footer .footer-text{
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background:rgba(51, 235, 5, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid #fff;
+}
+footer .footer-text p{
+    font-size: 20px;
+    text-align: center;
+    color: #fff;
 }
