--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,11 @@
-
+.logo{
+    width:500px;
+    height:250px;
+    margin-left:1px;
+    margin-rignit: 20px;
+    
+    
+        
 #section2{
     width: 1200px;
     padding: 40px;
