--- a/css/estilos.css
+++ b/css/estilos.css
@@ -102,5 +102,5 @@ footer .footer-text{
 footer .footer-text p{
     font-size: 20px;
     text-align: center;
-    color: #fff;
+    color: rgb(4, 80, 70);
 }
