--- a/css/estilos.css
+++ b/css/estilos.css
@@ -96,7 +96,7 @@ footer .footer-text{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 2px 
+    border-top: 2px; 
     color: rgb(4, 80, 70);
 }
 footer .footer-text p{
